# delivery

./: .env  .gitignore  Cargo.toml  flake.nix  makefile
.git-hooks/: pre-commit
.github/workflows/: check.yaml
entrypoint/: Cargo.toml
entrypoint/src/: config.rs  cron.rs  main.rs
internal/adapters/in/http/: Cargo.toml
internal/adapters/in/http/src/: handler.rs  lib.rs  server.rs  state.rs
internal/adapters/in/kafka/: Cargo.toml  build.rs
internal/adapters/in/kafka/proto/: baskets_events.proto
internal/adapters/in/kafka/src/: baskets_events_consumer.rs  lib.rs  mapper.rs  shared.rs
internal/adapters/in/kafka/src/consumers/: baskets_events_consumer.rs  mod.rs
internal/core/application/: Cargo.toml
internal/core/application/src/errors/: command_errors.rs  mod.rs  query_errors.rs
internal/core/application/src/usecases/: mod.rs
internal/core/application/src/usecases/commands/: assign_order_command.rs  assign_order_handler.rs  assign_order_test.rs  create_courier_command.rs  create_courier_handler.rs  create_order_command.rs  create_order_handler.rs  create_order_test.rs  mod.rs  move_couriers_command.rs  move_couriers_handler.rs  move_couriers_test.rs
internal/core/application/src/usecases/events/: event_bus.rs  event_bus_test.rs  mod.rs  order_completed_event_handler.rs  order_created_event_hander.rs  order_created_event_handler.rs  orders_event_bus.rs  orders_event_bus_test.rs
internal/core/application/src/usecases/jobs/: mod.rs  outbox_job.rs
internal/core/application/src/usecases/queries/: get_all_couriers_handler.rs  get_all_couriers_query.rs  get_all_incomplete_orders_handler.rs  get_all_incomplete_orders_query.rs  mod.rs
internal/core/domain/: Cargo.toml
internal/core/domain/src/errors/: domain_model_errors.rs  mod.rs
internal/core/domain/src/model/: mod.rs
internal/core/domain/src/model/courier/: courier.rs  courier_aggregate.rs  courier_aggregate_test.rs  courier_test.rs  mod.rs  storage_place.rs  storage_place_test.rs
internal/core/domain/src/model/kernel/: event.rs  location.rs  location_test.rs  message.rs  mod.rs  volume.rs
internal/core/domain/src/model/order/: mod.rs  order.rs  order_aggregate.rs  order_aggregate_test.rs  order_completed_event.rs  order_created_event.rs  order_events.rs  order_test.rs
internal/core/domain/src/model/services/: mod.rs  order_dispatcher.rs  order_dispatcher_test.rs
internal/core/ports/: Cargo.toml
internal/core/ports/src/: courier_repository_port.rs  errors.rs  events_producer_port.rs  geo_service_port.rs  lib.rs  order_repository_port.rs  outbox_repository.rs  unit_of_work_port.rs
