[workspace]
resolver = "3"
members = [
  "internal/adapters/out/postgres",
  "internal/core/application",
  "internal/core/domain",
  "internal/core/ports",
  "internal/generated/servers",
  "internal/adapters/in/http",
]

[workspace.dependencies]
diesel = { version = "2.3.3", features = ["r2d2", "postgres", "uuid"] }
uuid = { version = "1.18.1", features = ["v4"] }
testcontainers = { version = "0.25", features = ["blocking"] }
testcontainers-modules = { version = "0.13", features = ["postgres"] }
tokio = { version = "1.41", features = [
  "macros",
  "rt-multi-thread",
  "process",
] }
axum = { version = "0.8" }
