[workspace]
resolver = "3"
members = [
  "internal/adapters/out/postgres",
  "internal/core/application",
  "internal/core/domain",
  "internal/core/ports",
  "internal/generated/servers",
  "internal/adapters/in/http",
]

[workspace.dependencies]
diesel = { version = "2.3.3", features = ["r2d2", "postgres", "uuid"] }
uuid = { version = "1.18.1", features = ["v4"] }
testcontainers = { version = "0.25", features = ["blocking"] }
testcontainers-modules = { version = "0.13", features = ["postgres"] }
tokio = { version = "1.41", features = [
  "macros",
  "rt-multi-thread",
  "process",
] }
axum = { version = "0.8", features = ["multipart"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
async-trait = { version = "0.1" }
axum-extra = { version = "0.12", features = ["cookie", "query"] }
