[workspace]
resolver = "3"
members = [
  "internal/adapters/out/postgres",
  "internal/core/application",
  "internal/core/domain",
  "internal/core/ports",
  "internal/generated/servers",
  "internal/adapters/in/http",
  "entrypoint",
  "internal/adapters/out/grpc/geo",
  "internal/adapters/in/kafka",
]

[workspace.dependencies]
diesel = { version = "2.3.3", features = ["r2d2", "postgres", "uuid"] }
diesel_migrations = { version = "2.3.0", features = ["postgres"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
testcontainers = { version = "0.25", features = ["blocking"] }
testcontainers-modules = { version = "0.13", features = ["postgres"] }
tokio = { version = "1.41", features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "process",
] }
axum = { version = "0.8", features = ["multipart"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = { version = "0.1", features = ["attributes"] }
async-trait = { version = "0.1" }
axum-extra = { version = "0.12", features = ["cookie", "query"] }
serde = { version = "1.0", features = ["derive"] }
envy = { version = "0.4" }
r2d2 = { version = "0.8" }
tokio-cron-scheduler = "0.15"
tonic = "0.14"
prost = { version = "0.14", features = ["derive"] }
prost-build = "0.14"
prost-types = "0.14"
tonic-prost-build = "0.14"
tonic-prost = "0.14"
trait-variant = "0.1"
rdkafka = { version = "0.38.0", features = ["tracing"] }
