[package]
name = "entrypoint"
version = "0.1.0"
edition = "2024"

[dependencies]
in_http = { path = "../internal/adapters/in/http" }
out_postgres = { path = "../internal/adapters/out/postgres" }
ports = { path = "../internal/core/ports" }
tokio = { workspace = true }
serde = { workspace = true }
envy = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tokio-cron-scheduler = { workspace = true }
application = { path = "../internal/core/application" }
out_grpc_geo = { path = "../internal/adapters/out/grpc/geo" }
