[package]
name = "in_kafka"
version = "0.1.0"
edition = "2024"

[dependencies]
rdkafka = { workspace = true }
tracing = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
application = { path = "../../../core/application" }
ports = { path = "../../../core/ports" }
domain = { path = "../../../core/domain" }
uuid = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
